# x2_applications

./: .gitignore  CMakeLists.txt  README.md  build.sh  deploy.sh
GradingMethod/: CMakeLists.txt  README.md
GradingMethod/config/: grading.json  method_param.json
GradingMethod/include/GradingMethod/: GradingMethod.h  WeightGrading.h  error_code.h  grading_method_data_type.hpp
GradingMethod/src/method/: GradingMethod.cpp  WeightGrading.cpp
GradingMethod/test/: CMakeLists.txt  grading_example.cpp  gtest_Grading_Method.cpp  method_factory.cpp
SnapshotMethod/: CMakeLists.txt  README.md
SnapshotMethod/config/: method_param.json  snapshot.json  snapshot_no_config_file.json
SnapshotMethod/include/: CPPLINT.cfg
SnapshotMethod/include/SnapShotMethod/: error_code.h
SnapshotMethod/src/method/: SnapShotMethod.cpp
SnapshotMethod/test/: CMakeLists.txt  gtest_Snapshot_Method.cpp  method_factory.cpp  snap_testing.cpp  snapshot_example.cpp
SnapshotMethod/test/files/: video-00000001  video-00000002
SnapshotMethod/test/include/: CPPLINT.cfg  test_support.hpp
SnapshotMethod/test/src/: test_support.cpp
cnnmethod/: .arcconfig  .arclint  .bak_gitlab-ci.yml  .clang-format  CMakeLists.txt  Doxyfile  README.md
cnnmethod/example/: CMakeLists.txt  example_camera.cpp  example_do_det.cpp  example_do_fb_det_cnn.cpp  example_do_fb_feature.cpp  example_do_fb_img.cpp  example_do_fb_rect_cnn.cpp  example_do_pyramid.cpp  example_fb.cpp  example_get_model_info.cpp  main.cpp  method_factory.cpp
cnnmethod/example/config/: anti_nir.json  anti_spf.json  camera_det.json  cnn_pose_lmk.json  det.json  det_cnn_age_gender.json  det_cnn_pose_lmk.json  det_mot_anti.json  face_quality.json  feature.json
cnnmethod/example/conformance/: face_id_verification.cpp  rect_pyd_verification.cpp
cnnmethod/include/CNNMethod/: CNNConst.h
cnnmethod/model/face_det/: compile_face_det_model.sh  multitask-1-absorb-bn-ft-1-x2-hobot-predict-0010-x2-0.3.params  multitask-1-absorb-bn-ft-1-x2-hobot-predict-symbol-x2-0.3.json
cnnmethod/model/faceid/: compile_faceid_model.sh  model-wo-bn-b8bit-X2_1.4-withl2.json
cnnmethod/model/lmk_pose/: compile_lmk_pose_model.sh  hobot-predict-20190403-0210.params  hobot-predict-20190403-symbol.json
cnnmethod/src/: CNNConst.cpp  CNNMethod.cpp
cnnmethod/src/PostPredictor/: AgeGenderPostPredictor.cpp  AntiSpfPostPredictor.cpp  FaceIdPostPredictor.cpp  FaceQualityPostPredictor.cpp  LmkPosePostPredictor.cpp  PostPredictor.cpp
cnnmethod/src/Predictor/: ImgInputPredictor.cpp  LmkInputPredictor.cpp  Predictor.cpp  RectInputPredictor.cpp
cnnmethod/src/util/: AlignFace.cpp  ModelInfo.cpp
cnnmethod/test/: CMakeLists.txt  test.bzl
facesnapfiltermethod/: .arcconfig  .arclint  CMakeLists.txt  Doxyfile  README.md
facesnapfiltermethod/cmake/: hobot_util.cmake  internal_utils.cmake
facesnapfiltermethod/config/: face_snap_filter_config.json
facesnapfiltermethod/include/FaceSnapFilterMethod/: FaceSnapFilterMethod.h  face_snap_filter_data_type.hpp
facesnapfiltermethod/src/: FaceSnapFilterMethod.cpp
facesnapfiltermethod/test/: CMakeLists.txt  test_main.cpp
fasterrcnnmethod/: .arclint  CMakeLists.txt  README.md
fasterrcnnmethod/configs/: face_pose_lmk_config_720p.json
fasterrcnnmethod/example/: CMakeLists.txt  block_queue.h  dump_face_result.cpp  dump_nv12.cpp  dump_util.h  main.cpp  method_factory.cpp  stopwatch.cpp  stopwatch.h  test_faster_rcnn_image.cpp  test_fb_fasterrcnn.cpp  test_fb_pyramid.cpp  test_hbcc_info.cpp  test_model_info.cpp  test_two_fasterrcnn.cpp  test_x2_dev_dual_pyramid.cpp  test_x2_dev_faster_rcnn_pyramid.cpp  test_x2_dev_single_pyramid.cpp
fasterrcnnmethod/example/input_util/: camera.h  vio.h
fasterrcnnmethod/include/FasterRCNNMethod/: FasterRCNNMethod.h  config.h  dump.h  faster_rcnn_imp.h  result.h  util.h  yuv_utils.h
fasterrcnnmethod/src/: dump.cpp  faster_rcnn.cpp  faster_rcnn_imp.cpp  yuv_utils.cc
fasterrcnnmethod/test/: CMakeLists.txt
fasterrcnnmethod/test/data/: image.list
fasterrcnnmethod/test/src/: face_det.cpp  gtest_main.cpp
hbipcplugin/: CMakeLists.txt  Doxyfile  README.md
hbipcplugin/include/hbipcplugin/: hbipcsession.h
hbipcplugin/include/utils/: buffer_file.h  gtest_helper.h  time_helper.h
hbipcplugin/sample/: CMakeLists.txt  sample.cpp
hbipcplugin/src/hbipcplugin/: hbipcplugin.cpp  (+1 more)
hbipcplugin/test/: CMakeLists.txt  gtest_main.cpp  gtest_msg.cpp
smartplugin/: .arclint  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md
smartplugin/models/: multitask-0-absorb-bn-ft-0-x2-hobot-predict-symbol_v0.0.18.json  multitask-3-lmks_pose_120_v2_75-x2-hobot-predict-0010.params  multitask-3-lmks_pose_120_v2_75-x2-hobot-predict-symbol.json
smartplugin/sample/: CMakeLists.txt  smart_main.cpp
smartplugin/test/: CMakeLists.txt  gtest_main.cc  test_api.cpp
vioplugin/: CMakeLists.txt  Doxyfile  README.md  deps
vioplugin/configs/: jpeg_iamge.json  nv12_image.json
vioplugin/test/: CMakeLists.txt  gtest_api.cpp  gtest_main.cc
xpluginflow/: CMakeLists.txt  Doxyfile  README.md
xpluginflow/sample/: CMakeLists.txt  sample_plugin.cpp
xpluginflow/test/: CMakeLists.txt  gtest_main.cc  test_api.cpp  test_xplugin.cpp
xpluginflow_msgtype/: CMakeLists.txt  Doxyfile  README.md
xpluginflow_msgtype/test/: CMakeLists.txt
xroc-framework/: CMakeLists.txt  Doxyfile  README.md
xroc-framework/cmake/: hobot_tools.cmake
xroc-framework/config/: filter.json  filter_multioutput.json
xroc-framework/doc/: SubWorkflow.md
xroc-framework/src/: method.cpp  method_manager.cpp  node.cpp  profiler.cpp  scheduler.cpp  thread_pool.cpp  xroc.cpp  xroc_c_api.cpp  xroc_capi.cpp  xroc_capi_type.cpp  xroc_config.cpp  xroc_data.cpp
xroc-framework/test/: CMakeLists.txt  config_test.cpp  cpp_api_test.cc  gtest_main.cc  gtest_main_withconf.cc  method_cb.cpp  method_factory.cpp  multisource_test.cpp  node_test.cpp  subworkflow_test.cpp  test.bzl  thread_model.cpp  thread_order.cpp  thread_priority_test.cpp  thread_safe.cpp  xroc_test.cpp
xroc-framework/tools/: README.md  xroc_framework_datashow.py
xroc-framework/tutorials/: README.md
(+248 files in other folders)
